--- a/docs/modules/fetching-data/pages/fetching-data.adoc
+++ b/docs/modules/fetching-data/pages/fetching-data.adoc
@@ -8,12 +8,11 @@ author: Julia Gustafsson
 To start fetching data with JPAstreamer you need to initialize an instance of `JPAStreamer`. This section describes how that is accomplished.
 
 == Obtaining a JPAstreamer instance
-JPAstreamer is initialized using a builder that takes the name of the persistence unit as a parameter like so:
+JPAstreamer is initialized with the name of the persistence unit like so:
 
 [source, java]
 ----
-JPAStreamer jpaStreamer = JPAStreamer.createJPAStreamerBuilder("sakila") #<1>
-    .build();
+JPAStreamer jpaStreamer = JPAStreamer.of("sakila"); #<1>
 ----
 <1> "sakila" is to be replaced with the name of *your* persistence unit that can be found in a configuration-file
 
